--- a/trial_similarity/similar_trials.html
+++ b/trial_similarity/similar_trials.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script type="text/javascript" src="../lib/d3.v5.min.js"></script>
 </head>
 <body>
-$END$
+  <script>
+
+<!--  var margin = {top: 20, right: 20, bottom: 20, left: 20},-->
+<!--    padding = {top: 60, right: 60, bottom: 60, left: 60},-->
+<!--    outerWidth = 960,-->
+<!--    outerHeight = 600,-->
+<!--    innerWidth = outerWidth - margin.left - margin.right,-->
+<!--    innerHeight = outerHeight - margin.top - margin.bottom,-->
+<!--    width = innerWidth - padding.left - padding.right,-->
+<!--    height = innerHeight - padding.top - padding.bottom;-->
+
+<!--  var svg = d3.select("body")-->
+<!--        .append("svg")-->
+<!--        .attr("id", "svg-a")-->
+<!--        .attr("width", width + margin.left + margin.right)-->
+<!--        .attr("height", height + margin.top + margin.bottom)-->
+<!--        .attr("style", "outline: lightgray solid")-->
+
+<!--  d3.select("svg")-->
+<!--    .append("text")-->
+<!--    .attr("id", "title-a")-->
+<!--    .attr("font-family", "sans-serif")-->
+<!--    .attr("font-size", "16px")-->
+<!--    .attr("font-weight", "bold")-->
+<!--    .attr("text-anchor", "middle")-->
+<!--    .attr("x", width/2)-->
+<!--    .attr("y", 30)-->
+<!--    .text("My Table");-->
+
+  var tabulate = function (data,columns) {
+        var table = d3.select('body').append('table')
+	    var thead = table.append('thead')
+	    var tbody = table.append('tbody')
+
+	    thead.append('tr')
+	        .selectAll('th')
+	        .data(columns)
+	        .enter()
+	        .append('th')
+	        .text(function (d) { return d })
+
+	    var rows = tbody.selectAll('tr')
+	        .data(data)
+	        .enter()
+	        .append('tr')
+
+	    var cells = rows.selectAll('td')
+	        .data(function(row) {
+	    	    return columns.map(function (column) {
+	    		    return { column: column, value: row[column] }
+	            })
+            })
+            .enter()
+            .append('td')
+            .text(function (d) { return d.value })
+
+        return table;
+  }
+
+  d3.csv('top_similar.csv',function (data) {
+	    var columns = ['nct_id', 'description', 'similarity_score']
+        tabulate(data,columns)
+  })
+
+  </script>
+
 </body>
 </html>
