--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </button>
                 <button type="button" class="has-border">
                     <i class='bx bx-shape-circle'></i>
-                    <span><a style="text-decoration:none;color:#fff" href="Webpages\clinical-trail-nav.html" target="_blank">Directed Graph</a></span>
+                    <span><a style="text-decoration:none;color:#fff" href="webpages\clinical-trail-nav.html" target="_blank">Directed Graph</a></span>
                 </button>
                 <button type="button" class="has-border">
                     <i class='bx bx-layer' ></i>
@@ -34,7 +34,7 @@
                 </button>
                 <button type="button" class="has-border">
                     <i class='bx bx-data' ></i>
-                    <span><a style="text-decoration:none;color:#fff" href="aact_schema.png" target="_blank">Schema</a></span>
+                    <span><a style="text-decoration:none;color:#fff" href="images\aact_schema.png" target="_blank">Schema</a></span>
                 </button>
             </nav>
         </div>
