--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button type="button" class="sidebar-burger" onclick="toggleSidebar()">
                     <i class='bx bx-menu'></i>
                 </button>
-                <img src="logo.png" alt="" class="sidebar-logo">
+                <img src="images/logo.png" alt="" class="sidebar-logo">
             </header>
 
             <nav class="sidebar-menu">
