Added code to populate d3 table for trial similarity

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </button>
                 <button type="button" class="has-border">
                     <i class='bx bx-layer' ></i>
-                    <span>Trial Similarity</span>
+                    <span><a style="text-decoration:none;color:#fff" href="teammate-work\trial_similarity\similar_trials.html" target="_blank">Trial Similarity</a></span>
                 </button>
                 <button type="button" class="has-border">
                     <i class='bx bx-data' ></i>
