Modified code to populate d3 table for trial similarity

--- a/teammate-work/trial_similarity/similar_trials.html
+++ b/teammate-work/trial_similarity/similar_trials.html
@@ -8,7 +8,7 @@
   <script>
 
   var tabulate = function (data,columns) {
-        var table = d3.select('body').append('table')
+        var table = d3.select('body').append('table').style('border', '1px solid black')
 	    var thead = table.append('thead')
 	    var tbody = table.append('tbody')
 
@@ -18,11 +18,13 @@
 	        .enter()
 	        .append('th')
 	        .text(function (d) { return d })
+            .style('border', '1px solid black')
 
 	    var rows = tbody.selectAll('tr')
 	        .data(data)
 	        .enter()
 	        .append('tr')
+      .style('border', '1px solid black')
 
 	    rows.selectAll('td')
 	        .data(function(row) {
@@ -33,6 +35,7 @@
             .enter()
             .append('td')
             .text(function (d) { return d.value })
+      .style('border', '1px solid black')
 
         return table;
   }
