changed the font of the table

--- a/teammate-work/trial_similarity/similar_trials.html
+++ b/teammate-work/trial_similarity/similar_trials.html
@@ -18,6 +18,7 @@
 	        .enter()
 	        .append('th')
 	        .text(function (d) { return d })
+	        .attr("font-family", "sans-serif")
             .style('border', '1px solid black')
 
 	    var rows = tbody.selectAll('tr')
@@ -35,6 +36,7 @@
             .enter()
             .append('td')
             .text(function (d) { return d.value })
+            .attr("font-family", "sans-serif")
       .style('border', '1px solid black')
 
         return table;
