--- a/webpages/trail-nav.html
+++ b/webpages/trail-nav.html
@@ -29,56 +29,69 @@ text {
 
 <body>
 <script type="text/javascript" src="../lib/d3.v5.min.js"></script>
+<script type="text/javascript" src="data.js"></script>
 <script>
 
 //reference: https://vizhub.com/curran/f192e44054aa4731b5ceba1b833028d6
 
-  const c1 = {level:3, collapsed: true,condition:'Type 2 Diabetes',intervention_type:undefined,intervention:undefined, nct_id:undefined}
-  const c2 = {level:3, collapsed: true, condition:'Hypertension',intervention_type:undefined,intervention:undefined, nct_id:undefined}
-  const c3 = {level:3, collapsed: true, condition:'Depression',intervention_type:undefined,intervention:undefined, nct_id:undefined}
+d3.dsv(",", "data-nav.csv", function(d) {
+  return {
+    nct_id: d.nct_id,
+    condition: d.condition,
+    intervention_type: d.intervention_type,
+    intervention:d.intervention
+  }
+}).then(function(data) {
 
-  const t1 = {level:2, collapsed: true, condition:'Hypertension',intervention_type:'Behavioral',intervention:undefined, nct_id:undefined}
-  const t2 = {level:2, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:undefined, nct_id:undefined}
-  const t3 = {level:2, collapsed: true, condition:'Hypertension',intervention_type:'Device',intervention:undefined, nct_id:undefined}
+  let nodes = [];
+  let links = [];
+  
+  // Get Data
+  const conditions = [...new Set(data.map(item => item.condition))]
+  for (i=0;i<conditions.length;i++){
+    let c = conditions[i]
+    let condition_node = {level:3, collapsed: true,condition:c,intervention_type:undefined,intervention:undefined, nct_id:undefined}
+    nodes.push(condition_node)
+    let intervention_types = [...new Set(data.filter(function(l){
+      return (l.condition == c)
+    }).map(item => item.intervention_type))]
+    for (j=0;j<intervention_types.length;j++){
+      let it = intervention_types[j]
+      let intervention_type_node = {level:2, collapsed: true,condition:c,intervention_type:it,intervention:undefined, nct_id:undefined}
+      nodes.push(intervention_type_node)
+      links.push({source:condition_node,target:intervention_type_node})
+      let interventions = [...new Set(data.filter(function(l){
+        return (l.condition == c) && (l.intervention_type == it)
+      }).map(item => item.intervention))]
+      for (k=0;k<interventions.length;k++){
+        let intervention = interventions[k]
+        let intervention_node = {level:1, collapsed: true,condition:c,intervention_type:it,intervention:intervention, nct_id:undefined}
+        nodes.push(intervention_node)
+        links.push({source:intervention_type_node,target:intervention_node})
+        let studies = [...new Set(data.filter(function(l){
+          return (l.condition == c) && (l.intervention_type == it) && (l.intervention == intervention)
+        }).map(item => item.nct_id))]
+        for (n=0;n<studies.length;n++){
+          let nct_id = studies[n]
+          let nct_node = {level:0, collapsed: true,condition:c,intervention_type:it,intervention:intervention, nct_id:nct_id}
+          nodes.push(nct_node)
+          links.push({source:intervention_node,target:nct_node})
+        }
 
-  const i1 = {level:1, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Aliskiren', nct_id:undefined}
-  const i2 = {level:1, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Atorvastatin', nct_id:undefined}
 
-  const s1 = {level:0, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Aliskiren', nct_id:1}
-  const s2 = {level:0, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Aliskiren', nct_id:2}
-  const s3 = {level:0, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Aliskiren', nct_id:3}
-  const s4 = {level:0, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Aliskiren', nct_id:4}
-  const s5 = {level:0, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Aliskiren', nct_id:5}
+      }
 
-  const s6 = {level:0, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Atorvastatin', nct_id:5}
-  const s7 = {level:0, collapsed: true, condition:'Hypertension',intervention_type:'Drug',intervention:'Atorvastatin', nct_id:6}
+    }
+  }
 
-  var links = [{source:c2,target:t2},
-    {source:c2,target:t1},
-    {source:c2,target:t2},
-    {source:c2,target:t3},
-    {source:t2,target:i1},
-    {source:t2,target:i2},
-    {source:i1,target:s1},
-    {source:i1,target:s2},
-    {source:i1,target:s3},
-    {source:i1,target:s4},
-    {source:i1,target:s5},
-    {source:i2,target:s6},
-    {source:i2,target:s7},
-  ]
-
-  var nodes = [c1,c2,c3,t1,t2,t3,i1,i2,s1,s2,s3,s4,s5,s6,s7];
-
-
-  var width = 1200,
-      height = 700;
+  var width = 2200,
+      height = 1700;
 
   var force = d3.forceSimulation()
       .nodes(nodes)
       .force("link", d3.forceLink(links).distance(100))
       .force('center', d3.forceCenter(width / 2, height / 2))
-      .force("charge", d3.forceManyBody().strength(-50))
+      .force("charge", d3.forceManyBody().strength(-10))
       .on("tick", tick);
 
   var svg = d3.select("body").append("svg")
@@ -129,7 +142,7 @@ text {
    node.append("circle")
       .attr("r", function(d) {
      d.weight = count_child_nodes(d)
-     d.radius = 10 + (d.weight * 5)
+     d.radius = 10 + d.weight/5
      return d.radius;
      })
      .style("fill", function(d){return myColor(d.level) })
@@ -153,10 +166,8 @@ text {
                return (d.condition)
              }})
             .style("font-size",function(d) {
-              return 10 + count_child_nodes(d) *0.5
+              return 10 + Math.sqrt(count_child_nodes(d)) *0.5
             } )
-
-
 
 
      // add the lines
@@ -179,6 +190,19 @@ text {
              return "translate(" + d.x + "," + d.y + ")";
          });
      };
+
+     d3.selectAll(".node")
+       .filter(function(d) {
+        return (d.level != 3);
+
+      }).style("opacity",0)
+        .datum(function(d) {
+            d.radius=0
+            return d
+        });
+       d3.selectAll("path").filter(function(d) {
+       return (d.level != 3);
+     }).style("opacity",0)
 
   function dragstarted(d) {
       d.fixed =true
@@ -218,7 +242,7 @@ text {
 
    //if
    var n = d3.select(this).datum()
-   
+
 
    d3.select(this).datum(function(d) {
     if (n.collapsed) {
@@ -250,7 +274,7 @@ text {
     }).style("opacity",opacity)
       .datum(function(d) {
         if (n.collapsed) {
-          d.radius=10 + (d.weight * 5)
+          d.radius=10 + d.weight/5
         } else{
           d.radius=0
         }
@@ -259,7 +283,6 @@ text {
 
      d3.selectAll("path").filter(function(d) {
      if (n.level == 1){
-
        return ((d.target.condition == n.condition)&&(d.target.intervention_type == n.intervention_type) && (d.target.intervention == n.intervention) & (d.target.nct_id!= undefined))
      }else if (n.level ==2){
        return ((d.target.condition == n.condition)&&(d.target.intervention_type == n.intervention_type)  && (d.target.intervention != undefined))
@@ -272,8 +295,9 @@ text {
 
    force.force("collide", d3.forceCollide(function(l){return l.radius }).iterations(1))
 
-
 }
+console.log(nodes)
+})
 
 </script>
 </body>
