making trials.gov the homepage nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="sidebar-menu">
                 <button type="button" class="has-border">
                     <i class='bx bx-home' ></i>
-                    <span>Home</span>
+                    <span><a style="text-decoration:none;color:#fff" href="https://beta.clinicaltrials.gov/" target="_blank">ClinicalTrials.gov</a></span>
                 </button>
                 <button type="button" class="has-border">
                     <i class='bx bx-shape-circle'></i>
