--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css\style.css">
     <title>CSE6242 Team 38 Final Project</title>
 </head>
 <body class="open">
@@ -30,7 +30,7 @@
                 </button>
                 <button type="button" class="has-border">
                     <i class='bx bx-layer' ></i>
-                    <span><a style="text-decoration:none;color:#fff" href="teammate-work\trial_similarity\similar_trials.html" target="_blank">Trial Similarity</a></span>
+                    <span><a style="text-decoration:none;color:#fff" href="webpages\trial_similarity\similar_trials.html" target="_blank">Trial Similarity</a></span>
                 </button>
                 <button type="button" class="has-border">
                     <i class='bx bx-data' ></i>
