--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h4>Network Graph</h4> The relationships of clinical trials is visualized using a force directed graph. We used D3 to create a network for navigating the clinical trials based on 6 hierarchical levels. Each level defines an attribute for dividing clinical trials into subgroups.<br>
             <br><b>Level 1:</b> Condition Type - based on the International Classification of Diseases
             <br><b>Level 2:</b> Condition - based on ‘Condition’ Table- the name of the disease or condition studied in the clinical trial
-            <br><b>Level 3:</b>s Intervention Type - based on ‘Intervention’ Table - includes drugs, medical devices, procedures, vaccines, and other products
+            <br><b>Level 3:</b> Intervention Type - based on ‘Intervention’ Table - includes drugs, medical devices, procedures, vaccines, and other products
             <br><b>Level 4:</b> Intervention - based on ‘Intervention’ Table - the specific intervention or exposure of interest to the study
             <br><b>Level 5:</b> Clinical Trial Phase - based on ‘Studies’ Table - Phase I/II/III/IV
             <br><b>Level 6:</b> Clinical Trial Studies - based on ‘Studies’ Table
